--- a/config.json
+++ b/config.json
@@ -2,6 +2,6 @@
     "title": "charges new selfbot",
     "author": "charge",
     "footer": "Nebula - Selfbot",
-    "token": "TOKEN HERE"
+    "token": "NzU1NDI1Mjk4NTA1NDAwNDkw.X9533A.GWS4ymUPrPyOGNY-YmHRK4KAYek"
     
 }
