--- a/config.json
+++ b/config.json
@@ -2,6 +2,6 @@
     "title": "charges new selfbot",
     "author": "charge",
     "footer": "Nebula - Selfbot",
-    "token": "TOKEN HERE"
+    "token": NzU1NDI1Mjk4NTA1NDAwNDkw.X98g7A.yP02wdxC15M7sC0IgpHfzxKm-do
     
 }
